# ollama-structured

./: .gitignore  LICENSE  README.md  demo_structured.py  ollama.py  pyproject.toml
ollama/: __init__.py  ollama.py
