[project]
name = "ollama-structured"
version = "0.1.1"
description = "Structured JSON client for Ollama (dataclasses/pydantic)."
authors = [{ name = "Marcel" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]
license = { text = "MIT" }

[project.optional-dependencies]
pydantic = ["pydantic>=2"]

[project.scripts]
ollama-demo = "ollama.demo_structured:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ollama"]
